--- a/CS106AJava/.classpath
+++ b/CS106AJava/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="K:/Java/CS106Aworkspace/acm.jar"/>
+	<classpathentry kind="lib" path="D:/Git/CS106A_JAVA/CS106AJava/acm.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
